--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
         "amphp/http-server-router": "^1.0",
         "monolog/monolog": "^2.0",
         "amphp/log": "^1.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8"
     }
 }
